Updated to now decouple the rule resolver, property resolver from the validation group, this will default to the normal one if needed, however you can override them, for use in extensions like the treacherous-knockout lib.
Also bumped the version up to 0.3.0 as enough internals has changed to warrant the bump.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/grofit/treacherous/issues"
   },
   "files": [
-    "dist/**",
+    "dist/**/*",
     "index.d.ts",
     "readme.md"
   ],
