Updated the dependencies to use npm and not the github links, also moved to `event-js` which is the npm version of `grofit/eventjs`.
Also added steps to run the tests from the gulp runner without the need of an ide via `gulp run-tests`.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "treacherous",
-  "version": "0.4.1",
+  "version": "0.5.0",
+  "license": "MIT",
   "dependencies": {
     "bluebird": "^3.3.4",
-    "property-resolver": "grofit/property-resolver",
-    "eventjs": "grofit/eventjs"
+    "property-resolver": "^0.0.6",
+    "event-js": "^0.1.0"
   },
   "main": "dist/treacherous.minimal.js",
   "bugs": {
@@ -26,7 +27,7 @@
   "devDependencies": {
     "gulp": "3.9.0",
     "gulp-typescript": "2.10.0",
-    "gulp-es6-exporter": "grofit/gulp-es6-exporter",
+    "gulp-es6-exporter": "^0.0.5",
     "gulp-uglify": "latest",
     "gulp-rename": "latest",
     "webpack-stream": "^3.1.0",
