--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "treacherous",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "license": "MIT",
   "dependencies": {
     "property-resolver": "^0.0.6",
     "event-js": "^0.1.0"
   },
-  "main": "dist/treacherous.js",
+  "main": "dist/commonjs/index.js",
   "bugs": {
     "url": "https://github.com/grofit/treacherous/issues"
   },
@@ -20,7 +20,7 @@
     "validate"
   ],
   "scripts": {
-    "test": "karma start --single-run --browsers PhantomJS ./tests/karma.conf.js"
+    "test": "karma start --single-run --browsers PhantomJS ./karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,6 @@
   "devDependencies": {
     "bluebird": "^3.3.4",
     "chai": "latest",
-    "chai-as-promised": "5.2.0",
     "chai-spies": "latest",
     "del": "latest",
     "gulp": "3.9.0",
@@ -40,9 +39,6 @@
     "gulp-typescript": "2.10.0",
     "gulp-uglify": "latest",
     "karma": "^1.1.0",
-    "karma-chai": "^0.1.0",
-    "karma-chai-as-promised": "0.1.2",
-    "karma-chai-spies": "latest",
     "karma-firefox-launcher": "latest",
     "karma-mocha": "latest",
     "karma-phantomjs-launcher": "^1.0.0",
@@ -53,8 +49,8 @@
     "require-dir": "^0.1.0",
     "rimraf": "latest",
     "typedoc": "^0.3.12",
-    "webpack-stream": "^3.1.0",
     "karma-webpack": "^1.7.0",
+    "webpack": "^1.4.0",
     "ts-loader": "^0.8.0"
   }
 }
