--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "validate"
   ],
   "scripts": {
-    "test": "karma start --single-run --browsers PhantomJS ./karma.conf.js"
+    "test": "karma start --single-run --browsers PhantomJS ./karma.conf.js",
+    "prepublish": "npm run typings:install",
+    "typings:install": "cross-env ./node_modules/.bin/typings install"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,7 @@
     "bluebird": "^3.4.1",
     "chai": "latest",
     "chai-spies": "latest",
+    "cross-env": "^2.0.0",
     "del": "latest",
     "gulp": "3.9.1",
     "gulp-bump": "latest",
@@ -42,17 +45,18 @@
     "karma": "1.1.1",
     "karma-firefox-launcher": "latest",
     "karma-mocha": "latest",
-    "mocha": "latest",
     "karma-phantomjs-launcher": "^1.0.1",
-    "phantomjs-prebuilt": "^2.1.7",
     "karma-webpack": "1.7.0",
-    "webpack": "1.13.1",
-    "ts-loader": "0.8.2",
-    "typescript": "1.8.10",
     "merge2": "latest",
     "mkdirp": "latest",
+    "mocha": "latest",
+    "phantomjs-prebuilt": "^2.1.7",
     "require-dir": "^0.3.0",
     "rimraf": "latest",
-    "typedoc": "^0.4.4"
+    "ts-loader": "0.8.2",
+    "typedoc": "^0.4.4",
+    "typescript": "1.8.10",
+    "typings": "^1.3.2",
+    "webpack": "1.13.1"
   }
 }
