Added property intellisense to the ruleset creator, although its completely optional to use, it also should have been called `intellisense-properties` as there is no type safety.

--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "gulp-uglify": "latest",
     "karma": "1.1.1",
     "karma-firefox-launcher": "latest",
-    "karma-mocha": "latest",
+    "karma-chrome-launcher": "latest",
     "karma-phantomjs-launcher": "^1.0.1",
+    "karma-mocha": "latest",
     "karma-webpack": "1.7.0",
     "merge2": "latest",
     "mkdirp": "latest",
