Updated the semver for dependencies to use `*` rather than `^` as it wasnt resolving anything past the last digit i.e 9, but not 10+

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "treacherous",
-  "version": "0.12.3",
+  "version": "0.12.4",
   "license": "MIT",
   "dependencies": {
-    "property-resolver": "^0.0.9",
-    "event-js": "^0.1.0"
+    "property-resolver": "0.0.*",
+    "event-js": "0.1.*"
   },
   "main": "dist/commonjs/index.js",
   "typings": "index.d.ts",
