tidied up some of the logic in the builder

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "treacherous",
-  "version": "0.12.5",
+  "version": "0.12.6",
   "license": "MIT",
   "dependencies": {
     "property-resolver": "0.0.*",
@@ -42,16 +42,16 @@
     "gulp-typedoc": "^2.0.0",
     "gulp-typescript": "2.13.6",
     "gulp-uglify": "latest",
-    "karma": "1.1.1",
+    "karma": "1.1.2",
     "karma-firefox-launcher": "latest",
     "karma-chrome-launcher": "latest",
-    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-phantomjs-launcher": "latest",
     "karma-mocha": "latest",
     "karma-webpack": "1.7.0",
     "merge2": "latest",
     "mkdirp": "latest",
     "mocha": "latest",
-    "phantomjs-prebuilt": "^2.1.7",
+    "phantomjs-prebuilt": "2.1.9",
     "require-dir": "^0.3.0",
     "rimraf": "latest",
     "ts-loader": "0.8.2",
