--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "treacherous",
-  "version": "0.12.7",
+  "version": "0.13.0",
   "license": "MIT",
   "dependencies": {
     "property-resolver": "0.0.*",
@@ -54,9 +54,9 @@
     "phantomjs-prebuilt": "2.1.9",
     "require-dir": "^0.3.0",
     "rimraf": "latest",
-    "ts-loader": "0.8.2",
+    "ts-loader": "1.3.0",
     "typedoc": "^0.4.4",
-    "typescript": "1.8.10",
+    "typescript": "^2.0.10",
     "typings": "^1.3.2",
     "webpack": "1.13.1"
   }
