Updated to latest typescript and added the helper addition so async await functionality will only be spit out once.

--- a/package.json
+++ b/package.json
@@ -52,9 +52,10 @@
     "phantomjs-prebuilt": "^2.1.14",
     "require-dir": "^0.3.1",
     "rimraf": "^2.6.1",
-    "ts-loader": "^2.0.3",
-    "typedoc": "^0.6.0",
-    "typescript": "^2.3.2",
+    "ts-loader": "^2.1.0",
+    "typedoc": "^0.7.1",
+    "typescript": "^2.3.4",
+    "tslib": "^1.7.1",
     "webpack": "^1.15.0",
     "@types/bluebird": "^3.5.3",
     "@types/chai": "^3.5.2",
