--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
-    "lib": ["es2016", "dom"]
+    "lib": ["es2016", "dom"],
+    "importHelpers": true
   },
   "exclude": [
     "node_modules"
