--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "dependencies": {
     "property-resolver": "^0.0.11",
-    "event-js": "^0.1.3"
+    "event-js": "^0.1.3",
+    "tslib": "^1.7.1"
   },
   "main": "dist/commonjs/index.js",
   "types": "dist/definitions/index.d.ts",
@@ -38,7 +39,7 @@
     "gulp-es6-exporter": "^0.0.5",
     "gulp-rename": "^1.2.2",
     "gulp-typedoc": "^2.0.2",
-    "gulp-typescript": "^3.1.6",
+    "gulp-typescript": "^3.1.7",
     "gulp-uglify": "^2.1.2",
     "karma": "^1.6.0",
     "karma-firefox-launcher": "^1.0.1",
@@ -55,7 +56,6 @@
     "ts-loader": "^2.1.0",
     "typedoc": "^0.7.1",
     "typescript": "^2.3.4",
-    "tslib": "^1.7.1",
     "webpack": "^1.15.0",
     "@types/bluebird": "^3.5.3",
     "@types/chai": "^3.5.2",
