Removed all implicit any as others have mentioned that it can flag up errors in their build in some cases.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "lib": ["es2016", "dom"],
-    "importHelpers": true
+    "importHelpers": true,
+    "noImplicitAny": true
   },
   "exclude": [
     "node_modules"
