Have updated some files in line with linting and added support for debugging tests, however it requires you to attach the chrome debugger in vscode AFTER the karma debug tests are running. Will look at making it launch them in one command.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "validate"
   ],
   "scripts": {
-    "test": "karma start --single-run --browsers PhantomJS ./karma.conf.js"
+    "test": "karma start --single-run --browsers PhantomJS ./karma.conf.js",
+    "test-debug": "karma start --single-run --browsers ChromeDebug ./karma.conf.js"    
   },
   "repository": {
     "type": "git",
