--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: node_js
 node_js:
-  - "4"
+  - "8"
 before_install:
-  - npm install -g typings
   - npm install -g karma
+  - npm install -g webpack
   - npm install
-install:
-  - typings install
