--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "validate"
   ],
   "scripts": {
+    "build": "gulp compile",
     "test": "karma start --single-run --browsers PhantomJS ./karma.conf.js",
     "test-debug": "karma start --single-run --browsers ChromeDebug ./karma.conf.js"
   },
@@ -50,6 +51,7 @@
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^3.0.0",
     "merge2": "^1.2.1",
+    "run-sequence": "^2.2.1",
     "mkdirp": "^0.5.1",
     "mocha": "^5.0.4",
     "phantomjs-prebuilt": "^2.1.14",
@@ -59,6 +61,7 @@
     "typedoc": "^0.11.1",
     "typescript": "^2.7.2",
     "webpack": "^4.2.0",
+    "webpack-stream": "^4.0.3",
     "@types/bluebird": "^3.5.20",
     "@types/chai": "^4.0.6",
     "@types/chai-spies": "^0.0.0",
