--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   ],
   "scripts": {
     "build": "gulp compile",
-    "test": "karma start --single-run --browsers PhantomJS ./karma.conf.js",
-    "test-debug": "karma start --single-run --browsers ChromeDebug ./karma.conf.js"
+    "test": "mocha -r ts-node/register tests/specs/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -61,10 +60,11 @@
     "typedoc": "^0.11.1",
     "typescript": "^2.9.2",
     "webpack": "^4.12.0",
+    "ts-node": "^6.1.1",
     "webpack-stream": "^4.0.3",
     "@types/bluebird": "^3.5.20",
-    "@types/chai": "^4.1.3",
+    "@types/chai": "^4.1.4",
     "@types/chai-spies": "^0.0.1",
-    "@types/mocha": "^5.2.1"
+    "@types/mocha": "~5.2.2"
   }
 }
