--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - "8"
 before_install:
-  - npm install -g karma
-  - npm install -g webpack
   - npm install
+script:
+  - npm run test-with-codacy
